--- a/miniprogram/pages/home/score/score.wxss
+++ b/miniprogram/pages/home/score/score.wxss
@@ -1,136 +1,87 @@
-/* miniprogram/pages/home/score/score.wxss */
-.score1{
+.btn-wrap {
+  margin: 0 auto;
+  overflow: hidden;
+  width: 80vw;
+  padding: 20rpx;
+}
+.btn-wrap button {
+  width: 264rpx;
+  height: 76rpx;
+  border-radius: 20rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.33);
+  font-family: Microsoft Yahei;
+  border: 2rpx solid rgba(0, 0, 0, 1);
+  line-height: 70rpx;
+  float: left;
+
+}
+.button1 {
+  margin: 0 14rpx;
+}
+
+.score {
   height: 190rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 200rpx;
   text-align: center;
   font-family: "方正汉真广标-标准";
 }
-.blank{
-  position: absolute;
-  left: 66rpx;
-  top: 422rpx;
+.wrap {
+  position: relative;
   width: 616rpx;
-  height: 680rpx;
-  line-height: 52rpx;
+  line-height: 40rpx;
   border-radius: 50rpx;
-  background-color: rgba(255, 255, 255, 0.47);
+  background-color: rgba(255, 255, 255, 0.51);
+  text-align: center;
+  box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+  margin: 100rpx auto;
+  padding: 24rpx;
+}
+.title {
   color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  box-shadow: 0px 4px 9px 0px rgba(178, 178, 178, 0.4);
-  font-family: Arial;
-  border: 1rpx solid rgba(255, 255, 255, 0);
-}
-.qusetionType,.singleChoice,.multipleChoice,.budingxiang,.panduan,
-.tiankong, .paixu{
-  position: absolute;
-  left: 136rpx;
-  width: 222rpx;
-  height: 78rpx;
-  line-height: 40rpx;
-  font-size: 26rpx;
-  text-align: center;
-  font-family: Microsoft Yahei;
-  color: rgba(16, 16, 16, 1);
-  padding: 20rpx;
-  width: 32%;
-  text-align: center;
-  outline-style:solid;
-	outline-width:2rpx;
-}
-.qusetionType, .accuracy{
-  top: 496rpx;
-}
-.singleChoice, .score2{
-  top: 574rpx;
-}
-.multipleChoice, .score3{
-  top: 652rpx;
-}
-.budingxiang, .score4{
-  top: 730rpx;
-}
-.panduan, .score5{
-  top: 812rpx;
-}
-.tiankong, .score6{
-  top: 890rpx;
-}
-.paixu, .score7{
-  top: 972rpx;
-}
-.accuracy,.score2,.score3,.score4,.score5,.score6,.score7{
-  position: absolute;
-  left: 377rpx;
-  width: 222rpx;
-  height: 78rpx;
-  line-height: 40rpx;
-  font-size: 26rpx;
-  text-align: center;
-  color: rgba(16, 16, 16, 1);
-  font-family: Microsoft Yahei;
-  padding: 20rpx;
-  width: 32%;
-  text-align: center;
-  outline-style:solid;
-	outline-width:2rpx;
-}
-/* .accuracy{
-  top: 556rpx;
-}
-.score2{
-  top: 634rpx;
-}
-.score3{
-  top: 712rpx;
-}
-.score4{
-  top:790rpx;
-}
-.score5{
-  top: 873rpx;
-}
-.score6 {
-  top: 951rpx;
-}
-.score7 {
-  top: 1032rpx;
-} */
-.button1{
-  position: absolute;
-  left: 82rpx;
-  top: 1130rpx;
-  width: 264rpx;
-  height: 76rpx;
-  border-radius: 20rpx;
-  background-color: rgba(250, 191, 1, 1);
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.33);
-  font-family: Microsoft Yahei;
-  border: 2rpx solid rgba(0, 0, 0, 1);
+  font-size: 56rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
   line-height: 70rpx;
+  word-break: break-all;
 }
-.button2{
-  position: absolute;
-  left: 390rpx;
-  top: 1130rpx;
-  width: 264rpx;
-  height: 76rpx;
-  border-radius: 20rpx;
-  background-color: rgba(250, 191, 1, 1);
+.data {
+  width: 89%;
+	margin: 40rpx auto;
+	border: 4rpx solid black;
   color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
+  font-size: 32rpx;
   text-align: center;
-  box-shadow: 0rpx 4rpx 12rpx 0rpx rgba(0, 0, 0, 0.33);
-  font-family: Microsoft Yahei;
-  border: 2rpx solid rgba(0, 0, 0, 1);
-  line-height: 70rpx;
-
+  font-family: PingFang SC;
+  line-height: 78rpx;
 }
-van-row van-col {
-  border: 1rpx solid; 
-  background: red;
+.data text {
+	font-size: 36rpx;
+}
+.data .row {
+	border-top: 4rpx solid black;
+}
+.data .row:nth-child(1) {
+	border-top: none;
+}
+.data .column {
+	display: inline-block;
+	width: 50%;
+}
+.data .column:nth-child(1) {
+	border-right: 4rpx solid black;
+}
+.data .column text:nth-child(2) {
+  text-align: center;
+  display: inline-block;
+}
+.time {
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  font-family: PingFangSC-regular;
 }
