--- a/miniprogram/pages/center/myCenter/myCenter.wxml
+++ b/miniprogram/pages/center/myCenter/myCenter.wxml
@@ -7,7 +7,7 @@
 	<view class="change-avatar">
 		<image src="{{userInfo.avatarUrl}}"></image>
 	</view>
-	<view class="usr-name">
+	<view class="user-name">
 		<text>小黄昵称</text>
 		<text>{{userInfo.nickName}}</text>
 	</view>
@@ -16,13 +16,3 @@
 		<text>{{industry}}</text>
 	</view>
 </view>
-<!-- <view class="myCenter1">
-	<navigator class="changeTouxiang">更换头像</navigator>
-	<image class="touxiang" src="../../../images/icon/lightsou.png"></image>
-	<view class="line1"></view>
-	<view class="nicheng">小黄昵称</view>
-	<view class="mingzi">Christine</view>
-	<view class="line2"></view>
-	<view class="tuichu">退出登录</view>
-</view>
-<view class="blankBox1"></view> -->
