--- a/miniprogram/pages/home/enterWritten/enterWritten.wxss
+++ b/miniprogram/pages/home/enterWritten/enterWritten.wxss
@@ -1,113 +1,5 @@
-.written {
-  position: absolute;
-  left: 68rpx;
-  top: 200rpx;
-  width: 616rpx;
-  height: 875rpx;
-  line-height: 40rpx;
-  border-radius: 50rpx;
-  background-color: rgba(255, 255, 255, 0.47);
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  box-shadow: 0px 4px 9px 0px rgba(178, 178, 178, 0.4);
-  font-family: Arial;
-  border: 1rpx solid rgba(255, 255, 255, 0);
-}
-
-
-
-.textCover {
-  position: absolute;
-  left: 46rpx;
-  top: 48rpx;
-  width: 526rpx;
-  color: rgba(16, 16, 16, 1);
-  line-height: 83rpx;
-  text-align: left;
-  font-size: 56rpx;
-  font-family: PingFangSC-regular;
-}
-
-.qusetionType,
-.singleChoice,
-.multipleChoice,
-.budingxiang,
-.panduan,
-.tiankong,
-.paixu {
-  position: absolute;
-  left: 62rpx;
-  width: 40%;
-  height: 78rpx;
-  line-height: 40rpx;
-  font-size: 32rpx;
-  text-align: center;
-  font-family: Microsoft Yahei;
-  color: rgba(16, 16, 16, 1);
-  padding: 20rpx;
-  outline-style: solid;
-  outline-width: 2rpx;
-}
-
-.qusetionType,
-.number {
-  top: 268rpx;
-}
-
-.singleChoice,
-.number1 {
-  top: 346rpx;
-}
-
-.multipleChoice,
-.number2 {
-  top: 424rpx;
-}
-
-.budingxiang,
-.number3 {
-  top: 502rpx;
-}
-
-.panduan,
-.number4 {
-  top: 580rpx;
-}
-
-.tiankong,
-.number5 {
-  top: 658rpx;
-}
-
-.paixu,
-.number6 {
-  top: 736rpx;
-}
-
-.number,
-.number1,
-.number2,
-.number3,
-.number4,
-.number5,
-.number6 {
-  position: absolute;
-  left: 308rpx;
-  width: 40%;
-  height: 78rpx;
-  line-height: 40rpx;
-  font-size: 32rpx;
-  color: rgba(16, 16, 16, 1);
-  font-family: Microsoft Yahei;
-  padding: 20rpx;
-  text-align: center;
-  outline-style: solid;
-  outline-width: 2rpx;
-}
 
 .button {
-  top: 1000rpx;
   width: 264rpx;
   height: 76rpx;
   border-radius: 20rpx;
@@ -120,4 +12,63 @@
   border: 4rpx solid rgba(0, 0, 0, 1);
   justify-content: center;
   line-height: 70rpx;
+}
+.wrap {
+  position: relative;
+  width: 616rpx;
+  line-height: 40rpx;
+  border-radius: 50rpx;
+  background-color: rgba(255, 255, 255, 0.51);
+  text-align: center;
+  box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
+  border: 2rpx solid rgba(255, 255, 255, 0);
+  margin: 100rpx auto;
+  padding: 40rpx;
+}
+.title {
+  color: rgba(16, 16, 16, 1);
+  font-size: 56rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  line-height: 70rpx;
+  word-break: break-all;
+  width: 448rpx;
+  margin: 0 auto;
+}
+.data {
+  width: 89%;
+	margin: 40rpx auto;
+	border: 4rpx solid black;
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  line-height: 78rpx;
+}
+.data text {
+	font-size: 36rpx;
+}
+.data .row {
+	border-top: 4rpx solid black;
+}
+.data .row:nth-child(1) {
+	border-top: none;
+}
+.data .column {
+	display: inline-block;
+	width: 50%;
+}
+
+.data .column:nth-child(1) {
+	border-right: 4rpx solid black;
+}
+
+.data .column text:nth-child(2) {
+	float: right;
+	margin-right: 10rpx;
+}
+.time {
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  font-family: PingFangSC-regular;
 }
